[package]
name = "blockchain_p2p"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p="0.47"
futures="0.3.23"
env_logger = "0.9.0"

async-std = { version = "1.12.0", features = ["attributes"] }
serde = { version = "1.0.144", features = ["derive"] }
bincode = "1.3.3"
ethereum-types = "0.13.1"
ed25519 = "1.5.2"
crypto-hash = "0.3.4"
rand = "0.8.5"


[lib]
name="crypto_lib"
path="src/lib.rs"
