[package]
name = "blockchain_p2p"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p="0.47"
futures="0.3.23"
env_logger = "0.9.0"

async-std = { version = "1.12.0", features = ["attributes"] }
serde = { version = "1.0.144", features = ["derive"] }
bincode = "1.3.3"
ethereum-types = "0.14.0"
crypto-hash = "0.3.4"
ed25519-dalek = { version = "1.0.1", features = ["serde", "serde_bytes"] }
ed25519 = { version = "1.5.2", features = ["serde", "serde_bytes"] }
rand = { version = "0.7", default-features = false }
rand_core = { version = "0.5", default-features = false, optional = true }
hex = { version = "0.4.3", features = ["serde"] }
tokio = { version = "1.21.2", features = ["rt", "rt-multi-thread"] }
dialoguer = "0.10.2"
rayon = "1.5.3"




[lib]
name="crypto_lib"
path="src/lib.rs"
